{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 43,
  "lineage": "68545e89-bb50-0a6e-4b37-445561d481e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ws-eip-forNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a5b7d68b01b53b",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-015a5b7d68b01b53b",
            "association_id": "eipassoc-05e5b4d14a46c3bdd",
            "domain": "vpc",
            "id": "eipalloc-015a5b7d68b01b53b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0518c1c765597ac24",
            "private_dns": "ip-10-0-1-49.us-east-2.compute.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-3-16-80-251.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.80.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV-vpc-nat-gw-eip"
            },
            "tags_all": {
              "Name": "DEV-vpc-nat-gw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workspace_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-02a106489eba7524c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a106489eba7524c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a89d2caede1df16d",
            "private_dns": "ip-10-0-1-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e86bad9cae464671",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0751707824fdac379",
            "tags": {
              "Name": "DEV-vpc-instance"
            },
            "tags_all": {
              "Name": "DEV-vpc-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042dc80fae6f13089"
            ]
          },
          "dependencies": [
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:internet-gateway/igw-0a6c94a4f4534aa72",
            "id": "igw-0a6c94a4f4534aa72",
            "owner_id": "339713112256",
            "tags": {
              "Name": "DEV-vpc-igw"
            },
            "tags_all": {
              "Name": "DEV-vpc-igw"
            },
            "vpc_id": "vpc-090c103a986b6c897"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ws-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a5b7d68b01b53b",
            "association_id": "eipassoc-05e5b4d14a46c3bdd",
            "connectivity_type": "public",
            "id": "nat-0876ddd9749743eb7",
            "network_interface_id": "eni-0518c1c765597ac24",
            "private_ip": "10.0.1.49",
            "public_ip": "3.16.80.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0751707824fdac379",
            "tags": {
              "Name": "DEV-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "DEV-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ws-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-0726430c838ee9a12",
            "id": "rtb-0726430c838ee9a12",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6c94a4f4534aa72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0876ddd9749743eb7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "DEV-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c103a986b6c897"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.ws-NAT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ws-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-079b18f19f8248c99",
            "id": "rtb-079b18f19f8248c99",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0876ddd9749743eb7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "DEV-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c103a986b6c897"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_nat_gateway.ws-NAT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005a744146c84839f",
            "route_table_id": "rtb-079b18f19f8248c99",
            "subnet_id": "subnet-06d1ca831078b873d"
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_nat_gateway.ws-NAT",
            "aws_route_table.ws-private-rt",
            "aws_subnet.ws-subnet-private",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03785b6eed2f9998b",
            "route_table_id": "rtb-0726430c838ee9a12",
            "subnet_id": "subnet-0751707824fdac379"
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.ws-NAT",
            "aws_route_table.ws-Public-RT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ws-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-06d1ca831078b873d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d1ca831078b873d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-vpc-private-sub"
            },
            "tags_all": {
              "Name": "DEV-vpc-private-sub"
            },
            "vpc_id": "vpc-090c103a986b6c897"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ws-subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0751707824fdac379",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0751707824fdac379",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-vpc-pub-sub"
            },
            "tags_all": {
              "Name": "DEV-vpc-pub-sub"
            },
            "vpc_id": "vpc-090c103a986b6c897"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:vpc/vpc-090c103a986b6c897",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3e769103b0788a8",
            "default_route_table_id": "rtb-033c598bd91cba062",
            "default_security_group_id": "sg-042dc80fae6f13089",
            "dhcp_options_id": "dopt-0e363e00aa4ec7887",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090c103a986b6c897",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033c598bd91cba062",
            "owner_id": "339713112256",
            "tags": {
              "name": "DEV-vpc"
            },
            "tags_all": {
              "name": "DEV-vpc"
            }
          }
        }
      ]
    }
  ]
}